--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,18 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
     implementation 'com.google.dagger:dagger-android:2.16'
     implementation 'com.google.dagger:dagger-android-support:2.16'
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+
+    // DbFlow dependencies
+    def dbflow_version = "4.0.3"
+    dependencies {
+        // annotationProcessor now supported in Android Gradle plugin 2.2
+        // See https://bitbucket.org/hvisser/android-apt/wiki/Migration
+        annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+        implementation "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+        implementation "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+        // sql-cipher database encryption (optional)
+        // implementation "com.github.Raizlabs.DBFlow:dbflow-sqlcipher:${dbflow_version}"
+    }
 }
