--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -35,6 +36,7 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.16'
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
 
     // Retrofit
     implementation 'com.google.code.gson:gson:2.8.5'
