--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Android Studio
+*.iml
+.idea/*
+.gradle/*
+
+build/*
+!build/outputs/
+build/outputs/*
+!build/outputs/apk/
+build/outputs/apk/*
+!build/outputs/apk/release/
+build/outputs/apk/release/*
+!build/outputs/apk/release/app-release-unsigned.apk
 *.iml
 .gradle
 /local.properties
@@ -11,4 +43,13 @@
 .DS_Store
 /build
 /captures
+.externalNativeBuild
+
+.navigation/*
+captures/*
+output.json 
+.DS_Store
+
+# NDK
+obj/
 .externalNativeBuild
