--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,12 @@ android {
             includeAndroidResources = true
         }
     }
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.1"
     defaultConfig {
         applicationId "com.example.bghub"
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -69,6 +69,7 @@ android {
 
 dependencies {
     //kapt "com.android.databinding:compiler:3.1.4"
+
     // Core library
     androidTestImplementation 'androidx.test:core:1.0.0'
 
@@ -119,13 +120,18 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha05'
 
     // Dagger dependencies
-    implementation 'com.google.dagger:dagger:2.16'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
-    implementation 'com.google.dagger:dagger-android:2.16'
-    implementation 'com.google.dagger:dagger-android-support:2.16'
-    implementation 'androidx.room:room-runtime:2.2.5'
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
+    def dagger_version = "2.28"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    def dagger_assist_version = "0.3.3"
+    compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$dagger_assist_version"
+
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
 
     // Retrofit
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -148,7 +154,7 @@ dependencies {
 
 
     // DbFlow dependencies
-    def dbflow_version = "4.0.3"
+    def dbflow_version = "4.2.4"
     dependencies {
         // annotationProcessor now supported in Android Gradle plugin 2.2
         // See https://bitbucket.org/hvisser/android-apt/wiki/Migration
