--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,155 @@ output.json
 # NDK
 obj/
 .externalNativeBuild
+/app/.idea/.name
+/app/.idea/caches/build_file_checksums.ser
+/app/.idea/codeStyles/Project.xml
+/app/.idea/dbnavigator.xml
+/app/.idea/encodings.xml
+/app/.idea/gradle.xml
+/app/.idea/jarRepositories.xml
+/app/.idea/libraries/Gradle__androidx_activity_activity_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_annotation_annotation_1_2_0_alpha01_jar.xml
+/app/.idea/libraries/Gradle__androidx_annotation_annotation_experimental_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_appcompat_appcompat_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_appcompat_appcompat_resources_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_arch_core_core_common_2_1_0_jar.xml
+/app/.idea/libraries/Gradle__androidx_arch_core_core_runtime_2_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_asynclayoutinflater_asynclayoutinflater_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_browser_browser_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_cardview_cardview_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_collection_collection_1_1_0_jar.xml
+/app/.idea/libraries/Gradle__androidx_constraintlayout_constraintlayout_1_1_3_aar.xml
+/app/.idea/libraries/Gradle__androidx_constraintlayout_constraintlayout_solver_1_1_3_jar.xml
+/app/.idea/libraries/Gradle__androidx_coordinatorlayout_coordinatorlayout_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_core_core_1_5_0_alpha01_aar.xml
+/app/.idea/libraries/Gradle__androidx_core_core_ktx_1_5_0_alpha01_aar.xml
+/app/.idea/libraries/Gradle__androidx_cursoradapter_cursoradapter_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_customview_customview_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_databinding_databinding_adapters_3_4_2_aar.xml
+/app/.idea/libraries/Gradle__androidx_databinding_databinding_common_3_4_2_jar.xml
+/app/.idea/libraries/Gradle__androidx_databinding_databinding_runtime_3_4_2_aar.xml
+/app/.idea/libraries/Gradle__androidx_documentfile_documentfile_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_drawerlayout_drawerlayout_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_fragment_fragment_1_2_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_interpolator_interpolator_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_legacy_legacy_support_core_ui_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_legacy_legacy_support_core_utils_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_legacy_legacy_support_v4_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_lifecycle_lifecycle_common_2_2_0_jar.xml
+/app/.idea/libraries/Gradle__androidx_lifecycle_lifecycle_livedata_2_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_lifecycle_lifecycle_livedata_core_2_2_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_lifecycle_lifecycle_runtime_2_2_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_lifecycle_lifecycle_viewmodel_2_2_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_lifecycle_lifecycle_viewmodel_savedstate_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_loader_loader_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_localbroadcastmanager_localbroadcastmanager_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_media_media_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_print_print_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_recyclerview_recyclerview_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_room_room_common_2_2_5_jar.xml
+/app/.idea/libraries/Gradle__androidx_room_room_runtime_2_2_5_aar.xml
+/app/.idea/libraries/Gradle__androidx_savedstate_savedstate_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_slidingpanelayout_slidingpanelayout_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_sqlite_sqlite_2_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_sqlite_sqlite_framework_2_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_swiperefreshlayout_swiperefreshlayout_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_core_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_espresso_espresso_accessibility_3_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_espresso_espresso_contrib_3_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_espresso_espresso_core_3_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_espresso_espresso_idling_resource_3_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_espresso_espresso_intents_3_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_espresso_espresso_web_3_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_espresso_idling_idling_concurrent_3_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_ext_junit_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_ext_truth_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_monitor_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_rules_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_test_runner_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_transition_transition_1_2_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_vectordrawable_vectordrawable_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_vectordrawable_vectordrawable_animated_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_versionedparcelable_versionedparcelable_1_1_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_viewpager2_viewpager2_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_viewpager_viewpager_1_0_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_work_work_gcm_2_4_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_work_work_runtime_2_4_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_work_work_runtime_ktx_2_4_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_work_work_rxjava2_2_4_0_aar.xml
+/app/.idea/libraries/Gradle__androidx_work_work_testing_2_4_0_aar.xml
+/app/.idea/libraries/Gradle__com_android_installreferrer_installreferrer_1_0_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_android_sdk_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_applinks_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_common_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_core_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_login_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_messenger_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_places_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_facebook_android_facebook_share_5_15_3_aar.xml
+/app/.idea/libraries/Gradle__com_github_Raizlabs_DBFlow_dbflow_4_2_4_aar.xml
+/app/.idea/libraries/Gradle__com_github_Raizlabs_DBFlow_dbflow_core_4_2_4_jar.xml
+/app/.idea/libraries/Gradle__com_google_android_apps_common_testing_accessibility_framework_accessibility_test_framework_2_0_jar.xml
+/app/.idea/libraries/Gradle__com_google_android_gms_play_services_base_17_0_0_aar.xml
+/app/.idea/libraries/Gradle__com_google_android_gms_play_services_basement_17_0_0_aar.xml
+/app/.idea/libraries/Gradle__com_google_android_gms_play_services_location_17_0_0_aar.xml
+/app/.idea/libraries/Gradle__com_google_android_gms_play_services_places_placereport_17_0_0_aar.xml
+/app/.idea/libraries/Gradle__com_google_android_gms_play_services_tasks_17_0_0_aar.xml
+/app/.idea/libraries/Gradle__com_google_android_material_material_1_2_0_alpha05_aar.xml
+/app/.idea/libraries/Gradle__com_google_auto_value_auto_value_annotations_1_6_2_jar.xml
+/app/.idea/libraries/Gradle__com_google_code_findbugs_jsr305_3_0_2_jar.xml
+/app/.idea/libraries/Gradle__com_google_code_gson_gson_2_8_6_jar.xml
+/app/.idea/libraries/Gradle__com_google_dagger_dagger_2_28_jar.xml
+/app/.idea/libraries/Gradle__com_google_dagger_dagger_android_2_28_aar.xml
+/app/.idea/libraries/Gradle__com_google_dagger_dagger_android_support_2_28_aar.xml
+/app/.idea/libraries/Gradle__com_google_dagger_dagger_lint_aar_2_28_aar.xml
+/app/.idea/libraries/Gradle__com_google_errorprone_error_prone_annotations_2_3_1_jar.xml
+/app/.idea/libraries/Gradle__com_google_guava_guava_26_0_android_jar.xml
+/app/.idea/libraries/Gradle__com_google_guava_listenablefuture_1_0_jar.xml
+/app/.idea/libraries/Gradle__com_google_j2objc_j2objc_annotations_1_1_jar.xml
+/app/.idea/libraries/Gradle__com_google_truth_truth_0_42_jar.xml
+/app/.idea/libraries/Gradle__com_google_zxing_core_3_3_3_jar.xml
+/app/.idea/libraries/Gradle__com_googlecode_java_diff_utils_diffutils_1_3_0_jar.xml
+/app/.idea/libraries/Gradle__com_jakewharton_picasso_picasso2_okhttp3_downloader_1_1_0_jar.xml
+/app/.idea/libraries/Gradle__com_parse_bolts_bolts_android_1_4_0_jar.xml
+/app/.idea/libraries/Gradle__com_parse_bolts_bolts_applinks_1_4_0_jar.xml
+/app/.idea/libraries/Gradle__com_parse_bolts_bolts_tasks_1_4_0_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_inject_assisted_inject_annotations_0_3_3_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_inject_assisted_inject_annotations_dagger2_0_3_3_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_javawriter_2_1_1_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_okhttp3_logging_interceptor_4_7_2_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_okhttp3_okhttp_4_7_2_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_okio_okio_2_6_0_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_picasso_picasso_2_5_2_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_retrofit2_adapter_rxjava2_2_3_0_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_retrofit2_converter_gson_2_9_0_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_retrofit2_converter_simplexml_2_9_0_jar.xml
+/app/.idea/libraries/Gradle__com_squareup_retrofit2_retrofit_2_9_0_jar.xml
+/app/.idea/libraries/Gradle__com_yuyakaido_android_card_stack_view_2_3_4_aar.xml
+/app/.idea/libraries/Gradle__io_reactivex_rxjava2_rxjava_2_2_9_jar.xml
+/app/.idea/libraries/Gradle__javax_inject_javax_inject_1_jar.xml
+/app/.idea/libraries/Gradle__junit_junit_4_12_jar.xml
+/app/.idea/libraries/Gradle__net_sf_kxml_kxml2_2_3_0_jar.xml
+/app/.idea/libraries/Gradle__org_ccil_cowan_tagsoup_tagsoup_1_2_jar.xml
+/app/.idea/libraries/Gradle__org_checkerframework_checker_compat_qual_2_5_3_jar.xml
+/app/.idea/libraries/Gradle__org_checkerframework_checker_qual_2_5_3_jar.xml
+/app/.idea/libraries/Gradle__org_codehaus_mojo_animal_sniffer_annotations_1_14_jar.xml
+/app/.idea/libraries/Gradle__org_hamcrest_hamcrest_core_1_3_jar.xml
+/app/.idea/libraries/Gradle__org_hamcrest_hamcrest_integration_1_3_jar.xml
+/app/.idea/libraries/Gradle__org_hamcrest_hamcrest_library_1_3_jar.xml
+/app/.idea/libraries/Gradle__org_jetbrains_annotations_13_0_jar.xml
+/app/.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_android_extensions_runtime_1_3_72_jar.xml
+/app/.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_1_3_72_jar.xml
+/app/.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_common_1_3_72_jar.xml
+/app/.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jdk7_1_3_72_jar.xml
+/app/.idea/libraries/Gradle__org_jetbrains_kotlinx_kotlinx_coroutines_android_1_3_4_jar.xml
+/app/.idea/libraries/Gradle__org_jetbrains_kotlinx_kotlinx_coroutines_core_1_3_4_jar.xml
+/app/.idea/libraries/Gradle__org_reactivestreams_reactive_streams_1_0_2_jar.xml
+/app/.idea/libraries/Gradle__org_simpleframework_simple_xml_2_7_1_jar.xml
+/app/.idea/misc.xml
+/app/.idea/modules.xml
+/app/.idea/runConfigurations.xml
+/app/.idea/vcs.xml
+/app/.idea/workspace.xml
+/app/gradle/wrapper/gradle-wrapper.jar
+/app/gradle/wrapper/gradle-wrapper.properties
