--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
+
     //kapt "com.android.databinding:compiler:3.1.4"
 
     // Core library
@@ -93,12 +95,13 @@ dependencies {
     androidTestImplementation 'com.google.truth:truth:0.42'
 
     // Espresso dependencies
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.0'
-    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.1.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.1.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.0'
+//    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.1.0'
+//    testImplementation 'junit:junit:4.12'
 
     // The following Espresso dependency can be either "implementation"
     // or "androidTestImplementation", depending on whether you want the
@@ -106,6 +109,8 @@ dependencies {
     // classpath.
     androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
 
+
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -113,7 +118,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    testImplementation 'junit:junit:4.12'
+
 
     //CardSwipe behaviour
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
@@ -130,8 +135,8 @@ dependencies {
     def dagger_assist_version = "0.3.3"
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$dagger_assist_version"
 
-    implementation "androidx.room:room-runtime:2.2.5"
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
+//    implementation "androidx.room:room-runtime:2.2.5"
+//    annotationProcessor "androidx.room:room-compiler:2.2.5"
 
     // Retrofit
     implementation 'com.google.code.gson:gson:2.8.5'
