--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
 
     //kapt "com.android.databinding:compiler:3.1.4"
 
