--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,6 @@ buildscript {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'org.jetbrains.dokka'
 
@@ -33,16 +32,19 @@ android {
             includeAndroidResources = true
         }
     }
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "29.0.1"
     defaultConfig {
         applicationId "com.example.bghub"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resConfigs "en"
+    }
+    buildFeatures {
+        viewBinding true
     }
     buildTypes {
         release {
@@ -71,8 +73,6 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
-
-    //kapt "com.android.databinding:compiler:3.1.4"
 
     // Core library
     androidTestImplementation 'androidx.test:core:1.0.0'
@@ -116,7 +116,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
@@ -124,10 +124,9 @@ dependencies {
 
     //CardSwipe behaviour
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
 
     // Dagger dependencies
-    def dagger_version = "2.28"
+    def dagger_version = "2.35.1"
     implementation "com.google.dagger:dagger:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
