--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
+import org.jetbrains.dokka.gradle.DokkaTask
+
 buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
         maven { url 'https://maven.fabric.io/public' }
         maven { url "https://dl.bintray.com/kotlin/kotlin-eap"}
     }
@@ -13,7 +14,6 @@ buildscript {
     }
 }
 
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -22,8 +22,6 @@ plugins {
     id 'com.google.gms.google-services'
     id 'org.jetbrains.dokka'
 }
-
-
 
 android {
     dataBinding {
@@ -38,12 +36,12 @@ android {
             includeAndroidResources = true
         }
     }
-    compileSdkVersion 31
-    buildToolsVersion "29.0.1"
+    compileSdkVersion 32
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.bghub"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -76,42 +74,52 @@ android {
     }
 }
 
+kapt {
+    correctErrorTypes = true
+}
+
 dependencies {
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
-    implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:24.1.0'
 
     // Core library
-    androidTestImplementation 'androidx.test:core:1.0.0'
+    androidTestImplementation 'androidx.test:core:1.4.0'
 
     //WorkManager
-    def work_version = "2.4.0"
+    def work_version = "2.7.1"
+    //noinspection GradleDependency
     implementation "androidx.work:work-runtime-ktx:$work_version"
     // optional - RxJava2 support
+    //noinspection GradleDependency
     implementation "androidx.work:work-rxjava2:$work_version"
     // optional - GCMNetworkManager support
     implementation "androidx.work:work-gcm:$work_version"
     // optional - Test helpers
     androidTestImplementation "androidx.work:work-testing:$work_version"
 
-    // AndroidJUnitRunner and JUnit Rules
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test:rules:1.1.0'
+    //Testing
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // For instrumented tests.
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.41")
+    // ...with Kotlin.
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.41")
+    // For Robolectric tests.
+    testImplementation("com.google.dagger:hilt-android-testing:2.41")
+    // ...with Kotlin.
+    kaptTest("com.google.dagger:hilt-android-compiler:2.41")
 
-    // Assertions
-    androidTestImplementation 'androidx.test.ext:junit:1.0.0'
-    androidTestImplementation 'androidx.test.ext:truth:1.0.0'
-    androidTestImplementation 'com.google.truth:truth:0.42'
-    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
 
 
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 
 
     //CardSwipe behaviour
@@ -123,15 +131,17 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     def dagger_assist_version = "0.3.3"
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:$dagger_assist_version"
+    implementation("androidx.hilt:hilt-work:1.0.0")
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
 
     // Retrofit
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
-    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 
     // Picasso
     implementation("com.squareup.retrofit2:converter-simplexml:2.9.0") {
@@ -147,8 +157,7 @@ dependencies {
     // Room - ORM
     def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-
+    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
@@ -157,7 +166,7 @@ repositories {
 }
 
 // workaround: create DocsByDokka
-task DocsByDokka (type: org.jetbrains.dokka.gradle.DokkaTask) {
+task DocsByDokka (type: DokkaTask) {
     outputFormat = "html"
     outputDirectory = "$buildDir/dokka"
 }
